<resources>
    <string name="app_name">FirePROSP</string>
    <string name="prospects_enregistr_s">Prospects enregistrés</string>
    <string name="text0001">Aucune impression donnée</string>
    <string name="text0002">par:</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Mot de passe</string>
    <string name="repassword">Confirmez mot de passe</string>
    <string name="email">Votre Adresse E-mail</string>
    <string name="sign_in">Sign in</string>
    <string name="code_group">Identifiant FireD de l\'entreprise</string>
    <string name="text0003">Identifiant invalide</string>
    <string name="text0004">Adresse E-mail invalide</string>
    <string name="text0005">Mot de passe érroné</string>
    <string name="text0006">Vous avec saisi un mot de passe différent</string>
    <string name="text0007">Besoin d\'aide?</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="text0008">There is a problem with reset password, try later.</string>
    <string name="text0009">Reset password code has been emailed to</string>
    <string name="text0010">Email obligatoire</string>
    <string name="text0011">Mot de passe érroné</string>
    <string name="text0012">There is a problem with reset password, try later.</string>
    <string name="text0013">Search into main…</string>
    <string name="text0014">Are you looking for?</string>
    <string name="text0015">Mes Prospections</string>
    <string name="text0016">Prospecter</string>
    <string name="reporter">Reporter</string>
    <string name="text0017">Mes Rapports</string>
    <string name="text0018">Forum Commerciaux</string>
    <string name="text0019">De l\'aide?</string>
    <string name="text0020">Prospection</string>
    <string name="text0021">Nom et prenom(prospect | client)</string>
    <string name="text0022">Numero de téléphone</string>
    <string name="text0023">Adresse E-mail</string>
    <string name="text0024">Localisation (Quartier)[optionnel]</string>
    <string name="text0025">Impression du prospect|client</string>
    <string name="text0026">Suivi</string>
    <string name="add">ajouter</string>
    <string name="text0027">Se connecter</string>
    <string name="text0028">S\'inscrire</string>
    <string name="text0029">Contenu du rapport</string>
    <string name="text0030">Mettre en copie</string>
    <string name="text0031">Objet du rapport</string>
    <string name="text0032">Info technique</string>
    <string name="text0033">Info générale</string>
    <string name="text0034">Rapport professionnel</string>
    <string name="text0035">Votre nom d\'utilisateur(Optionel)</string>
    <string name="text0039">Hier à</string>
    <string name="text0040">Tous</string>
    <string name="text0041">[ suivi ]</string>
    <string name="text0042">[ prospection ]</string>
    <string name="multi_select_dialog_title">Mettre en copie</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="text0043">aucune</string>
    <string name="text0044">[ Technique ]</string>
    <string name="text0045">[ Générale ]</string>
    <string name="text0046">Please wait!</string>
    <string name="forum_com_title">Forum Commerc…</string>
    <string name="a_propos">A propos?</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="report_list_title">Reportings</string>
    <string name="prospecting_list_title"><![CDATA[Prospect & Client]]></string>
    <string name="text0047">Prospection enregistrée avec succès</string>
    <string name="text0048">Rapport enregister avec succès</string>
    <string name="text0049">l\'objet est obligatoire</string>
    <string name="text0050">le contenu ne doit pas être vide</string>
    <string name="text0051">Nom Client obligatoire</string>
    <string name="text0052">Localisation obligatoire</string>
    <string name="text0053">Téléphone ou email obligatoire</string>
    <string name="text0054">Vous devez renseigner l\'email et le numero de telephone, ou bien l\'un des deux</string>
    <string name="text0055">Email invalide</string>
    <string name="text0056">User granted location.</string>
    <string name="text0057">User denied location.</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_title">Default Channel</string>
    <string name="text0058">Account has been successfully created...</string>
    <string name="channel_list_title">Groupes</string>
    <string name="add_at_2019_11_23_n_08_23">2019–11-23 \n 08:23</string>
    <string name="crs_list_title">Comptes rendus suivi</string>
    <string name="add_new">+ add new</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_attached">file attached</string>
    <string name="remove">Remove</string>
    <string name="text0059">tape a message</string>
    <string name="firedapp_directory">FIRE-D-APP</string>
</resources>
