<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_above="@+id/cardview"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/colorError"
        android:text="@string/app_name"
        android:textSize="12sp"
        android:id="@+id/error"
        android:visibility="gone"
        android:fontFamily="@font/futura_light_italic_font"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="20dp"
        app:cardCornerRadius="30dp"
        android:layout_centerInParent="true"
        android:id="@+id/cardview"
        app:contentPadding="16dp"
        tools:style="@style/CardView"
        app:cardBackgroundColor="@color/colorBack"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/code_enterprise"
                android:hint="@string/code_group"
                android:gravity="center"
                android:visibility="visible"
                android:layout_below="@+id/repassword_l"
                android:inputType="textWebEmailAddress"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/futura_medium_bt"
                android:background="@drawable/login_edittext_rounded_corners"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/email"
                android:hint="@string/email"
                android:gravity="center"
                android:layout_below="@+id/username"
                android:inputType="textWebEmailAddress"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/futura_medium_bt"
                android:background="@drawable/login_edittext_rounded_corners"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/username"
                android:hint="@string/text0035"
                android:gravity="center"
                android:inputType="textWebEmailAddress"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/futura_medium_bt"
                android:background="@drawable/login_edittext_rounded_corners"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/email"
                android:layout_marginBottom="16dp"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/lightorangedark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:fontFamily="@font/futura_medium_bt"
                    android:background="@drawable/login_edittext_rounded_corners"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/repassword_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/password_l"
                android:layout_marginBottom="16dp"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/lightorangedark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/repassword"
                    android:hint="@string/repassword"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:fontFamily="@font/futura_medium_bt"
                    android:background="@drawable/login_edittext_rounded_corners"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:id="@+id/signup"
                android:layout_below="@+id/code_enterprise"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWrite"
                android:background="@drawable/buttonstyle1"
                android:fontFamily="@font/futura_medium_bt"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:id="@+id/signin"
        android:layout_below="@+id/cardview"
        android:layout_marginTop="10dp"
        android:textColor="@color/lightorangedark"
        android:background="@android:color/transparent"
        android:fontFamily="@font/futura_medium_bt"
        android:textSize="21sp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/text0007"
        android:textAllCaps="false"
        android:id="@+id/helpfull"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/lightorangedark"
        android:background="@drawable/bg_btn_helper"
        android:fontFamily="@font/futura_medium_bt"
        android:textSize="13sp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:paddingStart="20dp"
        android:paddingEnd="10dp" />

</RelativeLayout>