<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.ListingProspectsActivity">

    <include
        layout="@layout/toolbar"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:id="@+id/tabs"
        android:weightSum="3"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp"
        tools:ignore="UnknownIdInLayout">

        <RadioButton
            android:id="@+id/tabAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text0040"
            android:gravity="center"
            android:fontFamily="@font/futura_medium_bt"
            android:textSize="16sp"
            android:button="@null"
            android:checked="true"
            android:background="@drawable/radio_button_tab_selector"/>

        <RadioButton
            android:id="@+id/tabProspection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text0020"
            android:gravity="center"
            android:fontFamily="@font/futura_medium_bt"
            android:textSize="16sp"
            android:button="@null"
            android:background="@drawable/radio_button_tab_selector"/>

        <RadioButton
            android:id="@+id/tabSuivi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text0026"
            android:gravity="center"
            android:fontFamily="@font/futura_medium_bt"
            android:textSize="16sp"
            android:button="@null"
            android:background="@drawable/radio_button_tab_selector"/>

    </RadioGroup>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_below="@+id/tabs"
       android:background="@drawable/bg_listing_prospects"
       android:layout_height="match_parent">

       <TextView
           android:layout_width="match_parent"
           android:padding="6dp"
           android:background="#21741c1f"
           android:gravity="start"
           android:layout_marginTop="1dp"
           android:id="@+id/error"
           android:textStyle="italic"
           android:textSize="12sp"
           android:text="@string/text0013"
           android:layout_marginLeft="24dp"
           android:layout_marginRight="24dp"
           android:layout_marginBottom="10dp"
           android:fontFamily="@font/futura_light_italic_font"
           android:visibility="gone"
           android:textColor="@color/colorError"
           android:layout_height="wrap_content" />
   </RelativeLayout>
   <ProgressBar
       android:layout_width="wrap_content"
       android:progressTint="@color/colorApp3"
       android:layout_centerInParent="true"
       android:id="@+id/progressBar"
       android:visibility="gone"
       android:elevation="2dp"
       android:layout_height="wrap_content" />

   <android.support.v7.widget.RecyclerView
       android:layout_width="match_parent"
       android:id="@+id/recyclerView"
       android:paddingRight="16dp"
       android:paddingLeft="16dp"
       android:layout_below="@+id/tabs"
       android:layout_height="wrap_content"/>


</RelativeLayout>