<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.ProspectionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/text0034"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="3dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:id="@+id/title"
            android:fontFamily="@font/futura_medium_bt"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textColor="@color/lightorangedark"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:padding="6dp"
            android:background="#21741c1f"
            android:gravity="start"
            android:layout_marginTop="1dp"
            android:id="@+id/error"
            android:textStyle="italic"
            android:layout_below="@+id/title"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/futura_light_italic_font"
            android:visibility="gone"
            android:textColor="@color/colorError"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="20dp"
            app:cardCornerRadius="30dp"
            android:layout_below="@+id/error"
            android:id="@+id/cardview"
            app:contentPadding="16dp"
            android:layout_marginBottom="42dp"
            tools:style="@style/CardView"
            android:visibility="visible"
            app:cardBackgroundColor="@color/colorWrite"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_l"
                    android:layout_width="match_parent"
                    style="@style/TextAppearance.App.TextInputLayout"
                    android:theme="@style/TextLabel2"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/object"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/futura_medium_bt"
                        android:textSize="13sp"
                        android:textColorHint="@color/colorApp3"
                        android:layout_height="wrap_content"
                        android:hint="@string/text0031" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_l"
                    android:layout_below="@+id/name_l"
                    android:layout_width="match_parent"
                    style="@style/TextAppearance.App.TextInputLayout"
                    android:theme="@style/TextLabel2"
                    android:textColorHint="@color/colorApp3"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColorHint="@color/colorApp3"
                        android:fontFamily="@font/futura_medium_bt"
                        android:inputType="textWebEmailAddress"
                        android:hint="@string/text0030" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/impression_l"
                    android:layout_below="@+id/email_l"
                    android:layout_width="match_parent"
                    style="@style/TextAppearance.App.TextInputLayout"
                    android:theme="@style/TextLabel2"
                    android:textColorHint="@color/colorApp3"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/impression"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:textColorHint="@color/colorApp3"
                        android:gravity="start"
                        android:maxLines="10"
                        android:fontFamily="@font/futura_medium_bt"
                        android:textSize="12sp"
                        android:hint="@string/text0029" />
                </android.support.design.widget.TextInputLayout>


                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_below="@+id/impression_l"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radio_technique"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/futura_medium_bt"
                        android:textSize="12sp"
                        android:text="@string/text0032" />

                    <RadioButton
                        android:id="@+id/radio_generale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/futura_medium_bt"
                        android:textSize="12sp"
                        android:text="@string/text0033" />
                </RadioGroup>

                <Button
                    android:layout_width="wrap_content"
                    android:text="@string/add"
                    android:layout_below="@+id/radiogroup"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonstyle3"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/colorApp3"
                    android:id="@+id/save"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    android:textAllCaps="false"
                    android:fontFamily="@font/futura_medium_bt"
                    android:drawableRight="@drawable/ic_add_black_24dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:drawableEnd="@drawable/ic_add_black_24dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>