<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_marginTop="32dp"
            android:layout_above="@+id/cardview"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:textColor="@color/colorError"
            android:text="@string/app_name"
            android:textSize="12sp"
            android:id="@+id/error"
            android:visibility="gone"
            android:fontFamily="@font/futura_light_italic_font"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="20dp"
            app:cardCornerRadius="30dp"
            android:layout_centerInParent="true"
            android:id="@+id/cardview"
            app:contentPadding="16dp"
            tools:style="@style/CardView"
            android:visibility="visible"
            app:cardBackgroundColor="@color/colorBack"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/code_group"
                    android:hint="@string/code_group"
                    android:gravity="center"
                    android:visibility="gone"
                    android:inputType="textWebEmailAddress"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/futura_medium_bt"
                    android:background="@drawable/login_edittext_rounded_corners"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/code_group"
                    android:inputType="textWebEmailAddress"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/futura_medium_bt"
                    android:background="@drawable/login_edittext_rounded_corners"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_below="@+id/email"
                    android:layout_marginBottom="16dp"
                    app:hintEnabled="false"
                    app:passwordToggleTint="@color/lightorange"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/password"
                        android:hint="@string/password"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:fontFamily="@font/futura_medium_bt"
                        android:background="@drawable/login_edittext_rounded_corners"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:id="@+id/signin"
                    android:layout_below="@+id/password_l"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/colorWrite"
                    android:background="@drawable/buttonstyle1"
                    android:fontFamily="@font/futura_medium_bt"
                    android:textSize="14sp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="20dp"
            app:cardCornerRadius="30dp"
            android:layout_centerInParent="true"
            android:id="@+id/cardview_reset_pass_email"
            app:contentPadding="16dp"
            android:visibility="gone"
            tools:style="@style/CardView"
            android:layout_below="@+id/cardview"
            app:cardBackgroundColor="@color/colorBack"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/reset_email"
                    android:hint="@string/email"
                    android:gravity="center"
                    android:visibility="visible"
                    android:inputType="textWebEmailAddress"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/futura_medium_bt"
                    android:background="@drawable/login_edittext_rounded_corners"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_width="match_parent"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:id="@+id/reset_email_btn"
                    android:layout_below="@+id/reset_email"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/colorWrite"
                    android:background="@drawable/buttonstyle1"
                    android:fontFamily="@font/futura_medium_bt"
                    android:textSize="14sp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/bottom_l"
            android:gravity="center_horizontal"
            android:layout_below="@+id/cardview_reset_pass_email"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:id="@+id/signup"
                android:textColor="@color/lightorangedark"
                android:background="@android:color/transparent"
                android:fontFamily="@font/futura_medium_bt"
                android:textSize="16sp"
                android:gravity="right|center_vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:layout_width="wrap_content"
                android:text="\t|\t"
                android:textColor="@color/colorBack"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:text="@string/forgot_pass"
                android:textAllCaps="false"
                android:id="@+id/forgotpass_swipe"
                android:gravity="right|center_vertical"
                android:layout_gravity="center"
                android:textColor="@color/lightorangedark"
                android:background="@android:color/transparent"
                android:fontFamily="@font/futura_medium_bt"
                android:textSize="16sp"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:id="@+id/signin_2"
                android:textColor="@color/lightorangedark"
                android:background="@android:color/transparent"
                android:fontFamily="@font/futura_medium_bt"
                android:textSize="16sp"
                android:visibility="gone"
                android:gravity="left|center_vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:text="@string/text0007"
            android:textAllCaps="false"
            android:id="@+id/helpfull"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/lightorangedark"
            android:background="@drawable/bg_btn_helper"
            android:fontFamily="@font/futura_medium_bt"
            android:textSize="13sp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:paddingStart="20dp"
            android:paddingEnd="10dp" />
    </RelativeLayout>



</RelativeLayout>